did finishing of apis little bit updated dashboar and note controller and scheduled upcoming tasks